[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hyperlink_prediction"
verion = "0.1"
authors = [
    {name = "Giovanni Semioli", email = "g.semioli1@studenti.unisa.it"}
]
readme = "README.md"


[project.urls]
Homepage = "https://github.com/giosem1/hyperlink_prediction"