[build-system]
requires = [
    "setuptools>=42"
]
build-backend = "setuptools.build_meta"

[project]
name = "hyperlink_prediction"
version = "0.1"
authors = [
    {name = "Giovanni Semioli", email = "g.semioli1@studenti.unisa.it"}
]
readme = "README.md"


[project.urls]
Homepage = "https://github.com/giosem1/hyperlink_prediction"